--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-parallax-tilt": "^1.7.300",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
